[package]
name = "radio-history"
version = "0.1.0"
edition = "2021"

[dependencies]
afire = { version = "3.0.0-alpha.3", features = [
    "extensions",
    "tracing",
], default-features = false }
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clone-macro = "0.1.0"
flume = "0.11.0"
hound = "3.5.1"
itertools = "0.13.0"
num-complex = "0.4.6"
num-traits = "0.2.19"
parking_lot = "0.12.3"
rtlsdr = "0.1.4"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
whisper-rs = "0.11.1"

softbuffer = { version = "0.4.5", optional = true }
winit = { version = "0.30.5", optional = true }
rustfft = { version = "6.2.0", optional = true }

[features]
default = []
debug = ["softbuffer", "winit", "rustfft"]
